test/libsolidity/syntaxTests/nameAndTypeResolution/tuple_invalid_literal_too_large_for_uint_multi.sol
contract C {
    function f() pure public {
        uint x;
        (x, ) = (1E111, 1);
    }
}
// ----
// TypeError: (77-82): Invalid rational number.
